# sv-diagram

./: .gitignore  .svlint.toml  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: pages.yml
crates/sv-ast-lower/: Cargo.toml
crates/sv-ast-lower/src/: always.rs  instance.rs  lib.rs  lower.rs  module.rs  port.rs  signal.rs  types.rs
crates/sv-ast-lower/tests/: integration.rs
crates/sv-checker/: Cargo.toml
crates/sv-checker/src/: lib.rs
crates/sv-wasm/: Cargo.toml
crates/sv-wasm/src/: lib.rs
crates/vcd-parser/: Cargo.toml
crates/vcd-parser/src/: lib.rs  parser.rs
sim/: counter.sv  counter_tb.sv  run_sim.sh
web/: index.html  package-lock.json  package.json  vite.config.js
web/public/sample/: counter.vcd
web/src/: elk-builder.js  main.js  renderer.js  waveform-viewer.js
