[package]
name    = "sv-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
sv-ast-lower = { path = "../sv-ast-lower" }
vcd-parser   = { path = "../vcd-parser" }
wasm-bindgen = "0.2"
serde_json   = "1"
console_error_panic_hook = { version = "0.1", optional = true }

[features]
default = ["console_error_panic_hook"]
